--- a/main.css
+++ b/main.css
@@ -23,3 +23,14 @@ li {
 img {
     max-width: 95vw;
 }
+
+h1 {
+    animation: fadein ease 0.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadein {
+    50% { opacity: 0; }
+    0%, 100% { opacity: 1; }
+}
