--- a/main.css
+++ b/main.css
@@ -76,8 +76,12 @@
     src: url("fonts/Chevin_Pro_ExtraBold_Italic.otf") format("opentype");
 }
 
-body {
+h1, h2, h3, h4, h5, h6 {
     font-family: ChevinPro, Helvetica, Arial, sans-serif;
+}
+
+body {
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 #sub {
