--- a/v2/main.css
+++ b/v2/main.css
@@ -98,6 +98,16 @@ div#header {
         max-height: 60px;
         margin: 20px;
     }
+
+    select#version-select {
+        float: right;
+        height: 40px;
+        border-radius: 20px;
+        text-align: center;
+        font-size: 20px;
+        width: 60px;
+        margin: 30px 20px;
+    }
 }
 
 div#margin {
