--- a/v2/main.css
+++ b/v2/main.css
@@ -136,6 +136,8 @@ div#content {
         border: 3px solid;
         margin: 10px;
         text-align: center;
+        margin-left: auto;
+        margin-right: auto;
 
         a.section-link {
             width: 100%;
