--- a/v2/main.css
+++ b/v2/main.css
@@ -97,10 +97,46 @@ div#header {
     z-index: 1000;
     background-color: white;
 
+    img#dropdown {
+        max-height: 60px;
+        margin: 20px;
+        content: url("./icons/menu.svg");
+        cursor: pointer;
+    }
+
+    img#dropdown.close {
+        content: url("./icons/close.svg");
+    }
+
     img#logo {
         content: url("./logos/banner.png");
         max-height: 60px;
         margin: 20px;
+        position: absolute;
+        left: 50%;
+        transform: translateX(calc(-50% - 20px));
+    }
+
+    div#menu {
+        position: absolute;
+        left: 0px;
+        top: 90px;
+        background-color: #f1f1f1;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        transform: translateX(-100%);
+        transition: transform 500ms ease-in-out;
+
+        a.menu-link {
+            display: block;
+            font-size: 30px;
+            color: var(--bold-colour);
+            text-decoration: none;
+            padding: 10px 20px;
+        }
+    }
+
+    div#menu.active {
+        transform: none;
     }
 
     select#version-select {
