--- a/v2/main.css
+++ b/v2/main.css
@@ -537,6 +537,10 @@ ul.less-padding-left, ol.less-padding-left {
     padding-left: 25px;
 }
 
+img.img-render {
+    image-rendering: pixelated;
+}
+
 @media (max-width: 999px) {
     div#content div.section-flexbox {
         width: calc(100% - 20px);
