--- a/v2/main.css
+++ b/v2/main.css
@@ -435,7 +435,7 @@ p#sort {
 }
 
 table {
-    border: 1px solid black;
+    border: 2px solid black;
     
     th, td {
         border: 1px solid black;
@@ -541,6 +541,14 @@ img.img-render {
     image-rendering: pixelated;
 }
 
+.no-bold {
+    font-weight: normal;
+}
+
+.overbar {
+    text-decoration: overline;
+}
+
 @media (max-width: 999px) {
     div#content div.section-flexbox {
         width: calc(100% - 20px);
@@ -556,4 +564,9 @@ img.img-render {
 @keyframes fadeIn {
     from {opacity: 0;}
     to {opacity: 1;}
+}
+
+@keyframes fadeOut {
+    from {opacity: 1;}
+    to {opacity: 0;}
 }
