--- a/v2/main.css
+++ b/v2/main.css
@@ -234,6 +234,7 @@ div#footer {
     text-align: center;
 
     a#prev-link, a#next-link {
+        font-size: 16px;
         text-decoration: none;
         color: var(--button-background);
     }
