--- a/v2/main.css
+++ b/v2/main.css
@@ -96,6 +96,7 @@ div#header {
     left: 0px;
     z-index: 1000;
     background-color: white;
+    box-shadow: 0px 10px 10px 5px rgba(0, 0, 0, 0.1);
 
     img#dropdown {
         max-height: 60px;
@@ -224,7 +225,7 @@ div.feedback-page {
 }
 
 div#footer {
-    height: 1em;
+    height: 1.5em;
     width: calc(100% - 20px);
     position: fixed;
     bottom: 0px;
@@ -232,11 +233,21 @@ div#footer {
     padding: 10px;
     background-color: white;
     text-align: center;
+    box-shadow: 0px -10px 10px 5px rgba(0, 0, 0, 0.2);
+
+    b.no-underline {
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
 
     a#prev-link, a#next-link {
-        font-size: 18px;
+        font-size: 25px;
         text-decoration: none;
         color: var(--button-background);
+        position: absolute;
+        bottom: 5px;
     }
 
     a#prev-link.disabled, a#next-link.disabled {
@@ -245,11 +256,11 @@ div#footer {
     }
 
     a#prev-link {
-        float: left;
+        left: 5px;
     }
 
     a#next-link {
-        float: right;
+        right: 5px;
     }
 }
 
