--- a/v2/main.css
+++ b/v2/main.css
@@ -186,6 +186,49 @@ div#homepage {
     width: 100%;
 }
 
+div#last-page-popup {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    text-align: center;
+    width: 300px;
+    z-index: 2000;
+    background-color: white;
+    transition: background-color 500ms, transform 1000ms;
+    border-radius: 20px;
+    transform: none;
+    border: 3px solid black;
+
+    a {
+        color: inherit;
+        width: 100%;
+        height: 100%;
+        display: block;
+        padding: 10px 0px;
+
+        h1 {
+            color: red;
+        }
+    }
+
+    img#close-popup {
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        width: 25px;
+        transform: translate(50%, -50%);
+        cursor: pointer;
+    }
+}
+
+div#last-page-popup:has(a:hover) {
+    background-color: #eeeeee;
+}
+
+div#last-page-popup.hidden-popup {
+    transform: translateX(calc(100% + 25px));
+}
+
 div#content {
     position: absolute;
     top: 125px;
